--- a/GroceryOTG/res/values/strings.xml
+++ b/GroceryOTG/res/values/strings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">GroceryOTG</string>
-    <string name="no_content">Currently No Categories, Please Refresh</string>
+    <string name="no_content">Currently No Content, Please Refresh</string>
 </resources>
