--- a/GroceryOTG/res/values/strings.xml
+++ b/GroceryOTG/res/values/strings.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="app_name">GroceryOTG</string>
     <string name="no_content">Currently No Content, Please Refresh</string>
+    <string name="fresh_action">refresing..</string>
 </resources>
