--- a/GroceryOTG/res/values/strings.xml
+++ b/GroceryOTG/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="app_name">GroceryOTG</string>
     <string name="no_content">Currently No Content, Please Refresh</string>
     <string name="fresh_action">refresing..</string>
+    <string name="no_cart_item">Your shopping cart is currently empty</string>
+    <string name="cart_grocery_edit_name">Grocery item name</string>
+    <string name="cart_confirm_button">Confirm</string>
 </resources>
