--- a/GroceryOTG/res/values/strings.xml
+++ b/GroceryOTG/res/values/strings.xml
@@ -8,4 +8,10 @@
     <string name="cart_grocery_edit_name">Grocery item name</string>
     <string name="cart_confirm_button">Confirm</string>
     <string name="cart_item_delete">Delete this item</string>
+    <string name="slidingmenu_item_cat">Home</string>
+    <string name="slidingmenu_item_cart">Shopping Cart</string>
+    <string name="slidingmenu_item_map">Map</string>
+    <string name="slidingmenu_item_sync">Sync</string>
+    <string name="slidingmenu_item_settings">Settings</string>
+    <string name="slidingmenu_item_about">About</string>
 </resources>
