--- a/GroceryOTG/res/values/strings.xml
+++ b/GroceryOTG/res/values/strings.xml
@@ -22,6 +22,8 @@
     <string name="groceryoverview_menu_item_select">Select Mode</string>
     <string name="groceryoverview_menu_item_refresh">Refresh</string>
     
+    <string name="groceryoverview_row_imagedesc">Subcategory</string>
+    
     <string name="search_hint">Search grocery items</string>
     
 </resources>
