--- a/GroceryOTG/res/values/strings.xml
+++ b/GroceryOTG/res/values/strings.xml
@@ -28,5 +28,6 @@
     <string name="groceryoverview_filter_updated">Your store preferences have been updated</string>
     
     <string name="search_hint">Search grocery items</string>
-    
+
+    <string name="map_usermarker">You are here</string>
 </resources>
