Fixed update action when changing the shoplist or watchlist flag for an existing CartTable item

--- a/GroceryOTG/res/values/strings.xml
+++ b/GroceryOTG/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="no_new_content">There is no new available data. Last checked: %1$s</string>
     <string name="no_search_results">No results match your search criteria</string>
     <string name="fresh_action">Refreshing...</string>
-    <string name="no_cart_item">Your shopping cart is currently empty</string>
+    <string name="no_cart_item">Your Shopping List is currently empty</string>
     <string name="cart_grocery_edit_name">Grocery item name</string>
     <string name="cart_confirm_button">Confirm</string>
     <string name="cart_item_delete">Delete this item</string>
@@ -16,7 +16,7 @@
     <string name="cart_watchlist_removed">Item removed from Watch List</string>
     
     <string name="slidingmenu_item_cat">Home</string>
-    <string name="slidingmenu_item_cart">Shopping Cart</string>
+    <string name="slidingmenu_item_cart">Shopping List</string>
     <string name="slidingmenu_item_map">Map</string>
     <string name="slidingmenu_item_sync">Sync</string>
     <string name="slidingmenu_item_settings">Settings</string>
