--- a/GroceryOTG/res/values/strings.xml
+++ b/GroceryOTG/res/values/strings.xml
@@ -34,4 +34,9 @@
     <string name="search_hint">Search grocery items</string>
 
     <string name="map_usermarker">You are here</string>
+    <string name="setting_store_title">Select Store</string>
+    <string name="setting_store_dialog_title">Select Store</string>
+    <string name="setting_store_summary">Select your favourite store in your area</string>
+    <string name="setting_notification_freq_title">Frequency</string>
+    <string name="setting_notification_freq_summary">Select your favourite store in your area</string>
 </resources>
