--- a/GroceryOTG/res/values/strings.xml
+++ b/GroceryOTG/res/values/strings.xml
@@ -5,6 +5,8 @@
     <string name="no_content">Currently no content, please refresh</string>
     <string name="no_new_content">There is no new available data. Last checked: %1$s</string>
     <string name="no_search_results">No results match your search criteria</string>
+    <string name="search_results">Results</string>
+    <string name="search_results_num">0</string>
     <string name="fresh_action">Refreshing...</string>
     <string name="no_cart_item">Your Shopping List is currently empty</string>
     <string name="cart_grocery_edit_name">Grocery item name</string>
