--- a/GroceryOTG/res/values/strings.xml
+++ b/GroceryOTG/res/values/strings.xml
@@ -7,14 +7,14 @@
     <string name="no_search_results">No results match your search criteria</string>
     <string name="search_results">Results</string>
     <string name="search_results_num">0</string>
-    <string name="fresh_action">Refreshing...</string>
+    <string name="fresh_action">Refreshing…</string>
     <string name="no_cart_item">Your Shopping List is currently empty</string>
     <string name="cart_grocery_edit_name">Grocery item name</string>
     <string name="cart_confirm_button">Confirm</string>
     <string name="cart_item_delete">Delete this item</string>
     <string name="cart_shoplist_add">Add new item to Shopping List</string>
     <string name="cart_shoplist_added">Item added to Shopping List</string>
-    <string name="cart_watchlist_added">Item added to Watch List</string>
+    <string name="cart_watchlist_added">We will let you know when something like this goes on sale next time…</string>
     <string name="cart_shoplist_removed">Item removed from Shopping List</string>
     <string name="cart_watchlist_removed">Item removed from Watch List</string>
     <string name="cart_filter_shoplist">Filter items in Shopping List</string>
