--- a/GroceryOTG/res/values/strings.xml
+++ b/GroceryOTG/res/values/strings.xml
@@ -46,4 +46,5 @@
     <string name="setting_notification_freq_summary">Set how often you would like to be notified of new sales items</string>
     <string name="legacy_store_filter_ids">1|2|3|4|5</string>
     <string name="about_text">About GOTG!</string>
+    <string name="about_title">About GroceryOTG</string>
 </resources>
