--- a/GroceryOTG/res/values/strings.xml
+++ b/GroceryOTG/res/values/strings.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">GroceryOTG</string>
     
@@ -20,12 +19,15 @@
     <string name="cart_filter_shoplist">Filter items in Shopping List</string>
     <string name="cart_filter_watchlist">Filter items in Watch List</string>
     
-    <string name="slidingmenu_item_cat">Home</string>
-    <string name="slidingmenu_item_cart">Shopping List</string>
-    <string name="slidingmenu_item_map">Map</string>
-    <string name="slidingmenu_item_sync">Sync</string>
-    <string name="slidingmenu_item_settings">Settings</string>
-    <string name="slidingmenu_item_about">About</string>
+    <string name="navdrawer_item_cat">Home</string>
+    <string name="navdrawer_item_cart">Shopping List</string>
+    <string name="navdrawer_item_map">Map</string>
+    <string name="navdrawer_item_sync">Sync</string>
+    <string name="navdrawer_item_settings">Settings</string>
+    <string name="navdrawer_item_about">About</string>
+    
+    <string name="navdrawer_open">Open</string>
+    <string name="navdrawer_closed">Closed</string>
     
     <string name="groceryoverview_menu_item_search">Search</string>
     <string name="groceryoverview_menu_item_filter">Filter</string>
