Fixing bad title for grocery view pager. #85

--- a/GroceryOTG/res/values/strings.xml
+++ b/GroceryOTG/res/values/strings.xml
@@ -30,7 +30,7 @@
     <string name="navdrawer_closed">Closed</string>
     
     <string name="title_main">Categories</string>
-    <string name="title_grocery_pager">Search</string>
+    <string name="title_grocery_pager">Sales</string>
     <string name="title_search">Search</string>
     <string name="title_map">Map</string>
     <string name="title_settings">Settings</string>
