--- a/GroceryOTG/res/values/strings.xml
+++ b/GroceryOTG/res/values/strings.xml
@@ -21,7 +21,7 @@
     <string name="cart_filter_watchlist">Filter items in Watch List</string>
     
     <string name="navdrawer_item_cat">Home</string>
-    <string name="navdrawer_item_cart">Shopping List</string>
+    <string name="navdrawer_item_cart">Shopping Cart</string>
     <string name="navdrawer_item_map">Map</string>
     <string name="navdrawer_item_settings">Settings</string>
     <string name="navdrawer_item_sync">Sync</string>
@@ -35,7 +35,7 @@
     <string name="title_search">Search</string>
     <string name="title_map">Map</string>
     <string name="title_settings">Settings</string>
-    <string name="title_cart">Shopping List</string>
+    <string name="title_cart">Shopping Cart</string>
     <string name="title_cart_detail">Add Item</string>
     
     <string name="groceryoverview_menu_item_search">Search</string>
