--- a/GroceryOTG/res/values/strings.xml
+++ b/GroceryOTG/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">GroceryOTG</string>
+    <string name="app_name">Grocery OTG</string>
     <string name="version_name">1.0.0</string>
     
     <string name="no_content">Currently no content, please refresh</string>
@@ -8,29 +8,25 @@
     <string name="search_results">Results</string>
     <string name="search_results_num">0</string>
     <string name="fresh_action">Refreshing…</string>
-    <string name="no_cart_item">Your Shopping List is currently empty</string>
+    <string name="no_cart_item">Your shopping cart is currently empty</string>
     <string name="cart_grocery_edit_name">Grocery item name</string>
     <string name="cart_confirm_button">Confirm</string>
     <string name="cart_item_delete">Delete this item</string>
-    <string name="cart_shoplist_add">Add new item to Shopping List</string>
-    <string name="cart_shoplist_added">Item added to Shopping List</string>
-    <string name="cart_watchlist_added">We will let you know when something like this goes on sale next time…</string>
-    <string name="cart_shoplist_removed">Item removed from Shopping List</string>
-    <string name="cart_watchlist_removed">Item removed from Watch List</string>
-    <string name="cart_filter_shoplist">Filter items in Shopping List</string>
-    <string name="cart_filter_watchlist">Filter items in Watch List</string>
+    <string name="cart_shoplist_add">Add new item to shopping cart</string>
+    <string name="cart_shoplist_added">Item added to shopping cart</string>
+    <string name="cart_shoplist_removed">Item removed from shopping cart</string>
     
     <string name="navdrawer_item_cat">Home</string>
     <string name="navdrawer_item_cart">Shopping Cart</string>
     <string name="navdrawer_item_map">Map</string>
     <string name="navdrawer_item_settings">Settings</string>
-    <string name="navdrawer_item_sync">Sync</string>
     <string name="navdrawer_item_about">About</string>
+    <string name="navdrawer_item_sync">Sync</string>
     
     <string name="navdrawer_open">Open</string>
     <string name="navdrawer_closed">Closed</string>
     
-    <string name="title_main">Categories</string>
+    <string name="title_main">Home</string>
     <string name="title_grocery_pager">Sales</string>
     <string name="title_search">Search</string>
     <string name="title_map">Map</string>
@@ -39,13 +35,10 @@
     <string name="title_cart_detail">Add Item</string>
     
     <string name="groceryoverview_menu_item_search">Search</string>
-    <string name="groceryoverview_menu_item_filter">Filter</string>
     <string name="groceryoverview_menu_item_select">Select Mode</string>
     <string name="groceryoverview_menu_item_refresh">Refresh</string>
     
     <string name="groceryoverview_row_imagedesc">Subcategory</string>
-    <string name="groceryoverview_filter_title">Filter by store</string>
-    <string name="groceryoverview_filter_updated">Your store preferences have been updated</string>
     
     <string name="search_hint">Search</string>
 
@@ -59,6 +52,6 @@
     
     <string name="legacy_store_filter_ids">1|2|3|4|5</string>
     
-    <string name="about_text">Send feedbacks at <a href="grocery.otg+support@gmail.com">"grocery.otg@gmail.com"</a></string>
+    <string name="about_text">Send feedback to grocery.otg+support@gmail.com"</string>
     <string name="about_title">GroceryOTG</string>
 </resources>
