--- a/GroceryOTG/res/values/strings.xml
+++ b/GroceryOTG/res/values/strings.xml
@@ -21,6 +21,7 @@
     <string name="navdrawer_item_map">Map</string>
     <string name="navdrawer_item_settings">Settings</string>
     <string name="navdrawer_item_about">About</string>
+    <string name="navdrawer_item_changelog">Changelog</string>
     <string name="navdrawer_item_sync">Sync</string>
     
     <string name="navdrawer_open">Open</string>
