--- a/GroceryOTG/res/values/strings.xml
+++ b/GroceryOTG/res/values/strings.xml
@@ -16,12 +16,15 @@
     <string name="cart_shoplist_added">Item added to shopping cart</string>
     <string name="cart_shoplist_removed">Item removed from shopping cart</string>
     
+    <string name="navdrawer_heading_places">PLACES</string>
     <string name="navdrawer_item_cat">Home</string>
     <string name="navdrawer_item_cart">Shopping Cart</string>
     <string name="navdrawer_item_map">Map</string>
+    <string name="navdrawer_heading_tools">TOOLS</string>
     <string name="navdrawer_item_settings">Settings</string>
     <string name="navdrawer_item_about">About</string>
     <string name="navdrawer_item_changelog">Changelog</string>
+    
     <string name="navdrawer_item_sync">Sync</string>
     
     <string name="navdrawer_open">Open</string>
