--- a/GroceryOTG/res/values/strings.xml
+++ b/GroceryOTG/res/values/strings.xml
@@ -37,6 +37,9 @@
     <string name="title_settings">Settings</string>
     <string name="title_cart">Shopping Cart</string>
     <string name="title_cart_detail">Add Item</string>
+    <string name="title_cart_add_tab_text">MANUAL</string>
+    <string name="title_cart_add_tab_voice">VOICE</string>
+    <string name="title_cart_add_tab_code">UPC</string>
     
     <string name="groceryoverview_menu_item_search">Search</string>
     <string name="groceryoverview_menu_item_select">Select Mode</string>
