--- a/GroceryOTG/res/values/strings.xml
+++ b/GroceryOTG/res/values/strings.xml
@@ -10,7 +10,8 @@
     <string name="fresh_action">Refreshing…</string>
     <string name="no_cart_item">Your shopping cart is currently empty</string>
     <string name="cart_grocery_edit_name">Grocery item name</string>
-    <string name="cart_confirm_button">Confirm</string>
+    <string name="cart_add_positive_button">Add item</string>
+    <string name="cart_add_negative_button">Clear</string>
     <string name="cart_item_delete">Delete this item</string>
     <string name="cart_shoplist_add">Add new item to shopping cart</string>
     <string name="cart_shoplist_added">Item added to shopping cart</string>
