Removing email from about dialog description, since we have a feedback button.

--- a/GroceryOTG/res/values/strings.xml
+++ b/GroceryOTG/res/values/strings.xml
@@ -62,7 +62,7 @@
 	
 	<string name="no_price_available">N/A</string>
 	
-	<string name="about_text">Send feedback to grocery.otg+support@gmail.com"</string>
+	<string name="about_text">GroceryOTG-nightly</string>
 	<string name="about_title">GroceryOTG</string>
 	<string name="expanded_row_map">Map</string>
 	<string name="expanded_row_share">Share</string>
