--- a/GroceryOTG/res/values/strings.xml
+++ b/GroceryOTG/res/values/strings.xml
@@ -49,8 +49,9 @@
 	<string name="groceryoverview_row_imagedesc">Subcategory</string>
 	
 	<string name="search_hint">Search</string>
-	<string name="search_voice_prompt">Speak item name</string>
-	<string name="search_voice_hint">Click mic to begin</string>
+	<string name="cart_add_voice_prompt">Speak item name</string>
+	<string name="cart_add_voice_hint">Click mic to begin listening</string>
+	<string name="cart_add_code_hint">Click barcode to begin scanning</string>
 
 	<string name="map_usermarker">You are here</string>
 	<string name="setting_store_title">Select stores</string>
