--- a/GroceryOTG/res/values/strings.xml
+++ b/GroceryOTG/res/values/strings.xml
@@ -2,6 +2,8 @@
 	<string name="app_name">Grocery OTG</string>
 	<string name="version_name">1.0.0</string>
 	
+	<string name="upcdatabase_key">f0268314144a9baf5d105e31416b4e09</string>
+	
 	<string name="no_content">Currently no content, please refresh</string>
 	<string name="no_new_content">There is no new available data. Last checked: %1$s</string>
 	<string name="no_search_results">No results match your search criteria</string>
