--- a/GroceryOTG/res/values/strings.xml
+++ b/GroceryOTG/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
 	<string name="app_name">Grocery OTG</string>
 	<string name="version_name">1.0.0</string>
+	<string name="app_email">grocery.otg+support@gmail.com</string>
 	
 	<string name="upcdatabase_key">f0268314144a9baf5d105e31416b4e09</string>
 	
@@ -27,11 +28,14 @@
 	<string name="navdrawer_item_settings">Settings</string>
 	<string name="navdrawer_item_about">About</string>
 	<string name="navdrawer_item_changelog">Changelog</string>
+	<string name="navdrawer_item_about_feedback">Send feedback</string>
+	<string name="navdrawer_item_feedback_subject">GroceryOTG feedback</string>
 	
 	<string name="navdrawer_item_sync">Sync</string>
 	
 	<string name="navdrawer_open">Open</string>
 	<string name="navdrawer_closed">Closed</string>
+	<string name="action_close">Close</string>
 	
 	<string name="title_main">Home</string>
 	<string name="title_grocery_pager">Sales</string>
