--- a/GroceryOTG/res/values/strings.xml
+++ b/GroceryOTG/res/values/strings.xml
@@ -76,4 +76,19 @@
 	<string name="expanded_row_map">Map</string>
 	<string name="expanded_row_share">Share</string>
 	<string name="expanded_row_flyerview">View in flyer</string>
+
+    <!--GCM strings-->
+    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
+    <string name="already_registered">Device is already registered on server.</string>
+    <string name="gcm_registered">From GCM: device successfully registered (regId = %1$s)!</string>
+    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
+    <string name="gcm_message">From GCM: you got message!</string>
+    <string name="gcm_error">From GCM: error (%1$s).</string>
+    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
+    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
+    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
+    <string name="server_registered">From GAE Server: successfully added device!</string>
+    <string name="server_unregistered">From GAE Server: successfully removed device!</string>
+    <string name="server_register_error">Could not register device on GAE Server after %1$d attempts.</string>
+    <string name="server_unregister_error">Could not unregister device on GAE Server (%1$s).</string>
 </resources>
