--- a/GroceryGo-Android/res/values/strings.xml
+++ b/GroceryGo-Android/res/values/strings.xml
@@ -8,6 +8,7 @@
 	<string name="no_content">Currently no content, please refresh</string>
 	<string name="no_new_content">There is no new available data. Last checked: %1$s</string>
 	<string name="no_search_results">No results match your search criteria</string>
+	<string name="no_summary_content">No prices can be estimated for the items in your Shopping Cart.</string>
 	<string name="search_results">Results</string>
 	<string name="search_results_num">0</string>
 	<string name="fresh_action">Refreshing…</string>
@@ -49,6 +50,7 @@
 	<string name="title_settings">Settings</string>
 	<string name="title_cart">Shopping Cart</string>
 	<string name="title_cart_detail">Add Item</string>
+	<string name="title_cart_summary">Shopping Cart Summary</string>
 	<string name="title_cart_add_tab_text">MANUAL</string>
 	<string name="title_cart_add_tab_voice">VOICE</string>
 	<string name="title_cart_add_tab_code">UPC</string>
