--- a/GroceryGo-Android/res/values/strings.xml
+++ b/GroceryGo-Android/res/values/strings.xml
@@ -21,6 +21,8 @@
 	<string name="cart_shoplist_added">Item added to shopping cart</string>
 	<string name="cart_shoplist_removed">Item removed from shopping cart</string>
 	<string name="cart_summary">View summary by store</string>
+	<string name="shopcart_summary_title_storeparent">Store</string>
+	<string name="shopcart_summary_title_total">Total</string>
 	
 	<string name="navdrawer_heading_places">PLACES</string>
 	<string name="navdrawer_item_cat">Home</string>
