--- a/GroceryGo-Android/res/values/strings.xml
+++ b/GroceryGo-Android/res/values/strings.xml
@@ -1,7 +1,8 @@
 <resources>
 	<string name="app_name">GroceryGo</string>
-	<string name="version_name">1.1.0</string>
-	<string name="app_email">grocery.otg+support@gmail.com</string>
+    <string name="version_code">718</string>
+    <string name="version_name">1.1</string>
+	<string name="app_email">grocerygo.ca@gmail.com</string>
 	
 	<string name="upcdatabase_key">f0268314144a9baf5d105e31416b4e09</string>
 	
@@ -87,7 +88,7 @@
 	
 	<string name="no_price_available">N/A</string>
 	
-	<string name="about_text">GroceryGo-nightly</string>
+	<string name="about_text">Copy Right 2013, GroceryGo Inc.</string>
 	<string name="about_title">GroceryGo</string>
 	<string name="expanded_row_map">Map</string>
 	<string name="expanded_row_share">Share</string>
@@ -111,4 +112,5 @@
     <string name="gcm_newdata_notification">This weeks grocery data is now available, click the refresh button to
         sync.
     </string>
+
 </resources>
