--- a/GroceryGo-Android/res/values/strings.xml
+++ b/GroceryGo-Android/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">GroceryGo</string>
-    <string name="version_name">1.2</string>
+    <string name="version_name">1.4</string>
     <string name="app_email">grocerygo.ca@gmail.com</string>
 
     <string name="upcdatabase_key">f0268314144a9baf5d105e31416b4e09</string>
@@ -85,7 +85,7 @@
     <string name="setting_storelocation_summary">Filter by store locations near you</string>
     <string name="setting_storelocation_default">1</string>
 
-    <string name="legacy_store_filter_ids">1|2|3|4|5</string>
+    <string name="legacy_store_filter_ids">1|2|3|4|5|6</string>
 
     <string name="no_price_available">N/A</string>
     <string name="my_link"></string>
